# sockpuppets

./: .gitignore  COMPILATION_GUIDE.md  PR_DESCRIPTION.md  README.md  agent.py  demo.cast  main.py  requirements.txt  server.py  setup.sh  stego.py
agent_c/: agent.c  dllmain.c  ghost_data.c
agent_csharp/: Program.cs  SvcHealth.csproj
agent_go/: agent.go  evasion.go  exec.go  exports.go  facade.go  ghost_profile.go  go.mod  healthserver.go  procbreak.go  socks.go  stager.go  stager_clean.go  transport_http.go  transport_ws.go  versioninfo.json
agent_rust/: Cargo.toml
agent_rust/src/: ghost.rs  main.rs  transport.rs
crypto/: encryption.py
docs/superpowers/plans/: 2026-05-31-multi-lang-refactor.md
docs/superpowers/specs/: 2026-03-11-http-https-transport-design.md
generators/: base.py  shellcode.py
obfuscation/: entropy.py  morphing.py
templates/: agent_beacon_minimal.py  agent_http_beacon_minimal.py  agent_http_template.hta  agent_http_template.js  agent_http_template.ps1  agent_http_template.py  agent_template.hta  agent_template.js  agent_template.ps1  agent_template.py  evasion_linux.py  evasion_macos.py  evasion_windows.ps1  evasion_windows.py  malleable_profiles.py  streaming_module.py
ui/: theme.py
