[package]
name = "svcmonitor"
version = "1.0.0"
edition = "2021"

[features]
default = ["http"]
http = []
websocket = ["dep:tungstenite"]
tls = ["dep:native-tls"]

[dependencies]
base64 = "0.22"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
regex = "1"
sha2 = "0.10"
hex = "0.4"
url = "2"
toml = "0.8"
tungstenite = { version = "0.24", features = ["native-tls"], optional = true }
native-tls = { version = "0.2", optional = true }

[profile.release]
opt-level = "z"
lto = true
strip = false
panic = "abort"
codegen-units = 1
